Bug fix, image stretching

--- a/style.css
+++ b/style.css
@@ -121,11 +121,12 @@ p {
     display: none;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
     .card {
         display: flex;
         flex-direction: row;
         max-width: 50rem;
+        align-items: stretch;
     }
 
     .card-img {
